# bufrust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python-wheels.yml
python/bufrust/: __init__.py
scripts/: bump-version.py  download-eccodes-bufr-tests.ps1
src/: bitstream.rs  data.rs  descriptor.rs  error.rs  lib.rs  message.rs  tables.rs
tests/: eccodes_bufr4_numeric.rs  eccodes_bufr4_refs.rs  fixture_decode.rs  table_loading.rs
tests/fixtures/: ecmwf_cyclone_tracks.bufr  rjtd_drifting_buoy.bufr  rjtd_iucc10.bufr
