[package]
name = "bufrust"
version = "1.0.4"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "Rust BUFR edition 4 parser with Python bindings"
readme = "README.md"
documentation = "https://docs.rs/bufrust"
keywords = ["bufr", "meteorology", "wmo", "eccodes", "python"]
categories = ["science", "parser-implementations"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "pyproject.toml",
    "LICENSE",
    "README.md",
    "src/**",
    "tests/**",
    "python/**",
    "scripts/**",
    ".gitignore",
]

[lib]
name = "bufrust"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3"
pyo3 = { version = "0.27", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
