[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "bufrust"
version = "1.0.0"
description = "Fast BUFR edition 4 parser and decoder powered by Rust"
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "bufrust contributors" },
]
keywords = ["bufr", "meteorology", "wmo", "eccodes", "xarray"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[project.optional-dependencies]
dataframe = ["pandas>=1.5"]

[tool.maturin]
python-source = "python"
module-name = "bufrust._bufrust"
include = [
  "python/bufrust/py.typed",
  "python/bufrust/definitions/**/*",
]
